STAC-20628: Add topology time to validate that the checksState actually exists

--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -53,6 +53,7 @@ paths:
         - $ref: "#/components/parameters/id"
         - $ref: "#/components/parameters/startTime"
         - $ref: "#/components/parameters/endTime"
+        - $ref: "#/components/parameters/topologyTime"
       responses:
         "200":
           $ref: "#/components/responses/monitorCheckStatusHealthHistory"
