STAC-20634 Use the same field names of ArgumentTopologyQueryVal as in the domain model

--- a/spec/arguments.api.yaml
+++ b/spec/arguments.api.yaml
@@ -200,12 +200,12 @@ components:
         parameter:
           type: integer
           format: int64
-        value:
+        query:
           type: string
       required:
         - _type
         - parameter
-        - value
+        - query
     ArgumentPropagatedHealthStateVal:
       type: object
       properties:
