--- a/spec/traces.api.yaml
+++ b/spec/traces.api.yaml
@@ -25,7 +25,7 @@ paths:
         - $ref: "#/components/parameters/pageSize"
         - $ref: "#/components/parameters/page"
       summary: Query for spans
-      description: Query for spans using filters, get all spans for a trace by trace id
+      description: Query for spans using filters, get all spans for a trace by trace id. Filters that accept an array of values match if any of the values match (think of a SQL IN expression).
       operationId: querySpans
       responses:
         "200":
